--- a/exercises/medium/03 - Markov Chains/Markov_Chains_solution.ipynb
+++ b/exercises/medium/03 - Markov Chains/Markov_Chains_solution.ipynb
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "gr_hZVHDf5LC"
       },
@@ -58,7 +58,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "21cb3kvbf5LC"
       },
@@ -75,12 +75,12 @@
       },
       "source": [
         "## Übergangs-Wahrscheinlichkeiten\n",
-        "Diese beiden Listen repräsentieren zwei kurze Melodien. Nun müssen wir zählen, wie oft welcher Ton auf welchen anderen Ton folgt. Dazu erstellen wir eine Tabelle mit der Python-Bibliothek `pandas`. Vervollständige folgende Funktion, bei der die Übergänge von einem Ton in den anderen gezählt werden. Dabei entsprechen die Spalten den aktuellen Tönen und die Zeilen den jeweils darauf folgenden Tönen."
+        "Diese beiden Listen repräsentieren zwei kurze Melodien. Nun müssen wir zählen, wie oft welcher Ton auf welchen anderen Ton folgt. Dazu erstellen wir eine Tabelle mit der Python-Bibliothek `pandas`. Vervollständige folgende Funktion, bei der die Übergänge von einem Ton in den anderen gezählt werden. Dabei entsprechen die Spalten den aktuellen Tönen und die Zeilen den jeweils darauf folgenden Tönen. Folgt also zum Beispiel auf einen Pitch 60 der Pitch 62, so wird der Eintrag in der Spalte für den 60. Ton in der Zeile für den 62. Ton um 1 erhöht. Der Einfachheit halber kann die Tabelle alle Töne von 0 bis zum höchsten verwendeten Ton abdecken. Ist also der Ton 64 der höchste Ton, enthält die Tabelle die Spalten und Zeilen von 0-64 und hat damit 65 Spalten und 65 Zeilen."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "JsO5uUSmf5LD"
       },
@@ -102,8 +102,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Um zu testen, ob die Spalte korrekt erstellt wurde, gibt es hier zwei Tests"
+      ],
+      "metadata": {
+        "id": "OGMUYDROD2KC"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "r9SAlwimf5LD"
       },
@@ -111,31 +120,8 @@
       "source": [
         "transitions = make_table([brother_john, little_lamb])\n",
         "assert transitions.loc[62,60] == 3, f\"Expected the count of 3 for the transition from 60 to 62, but got {transitions.loc[62,60]}\"\n",
-        "assert transitions.loc[60,62] == 1, f\"Expected the count of 1 for the transition from 62 to 60, but got {transitions.loc[60,62]}\""
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "2S3JC0oT2heW",
-        "outputId": "24920ff0-6405-4910-b96b-b79e9bc89bdf"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "3"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 8
-        }
+        "assert transitions.loc[60,62] == 1, f\"Expected the count of 1 for the transition from 62 to 60, but got {transitions.loc[60,62]}\"\n",
+        "print(\"Der Test war erfolgreich.\")"
       ]
     },
     {
@@ -486,12 +472,14 @@
       },
       "source": [
         "## Markov-Kette\n",
-        "Nun benötigen wir eine Funktion, die uns anhand des vorangegangen Tones und den Übergangs-Wahrscheinlichkeiten in der Tabelle, den nächsten Ton voraussagt."
+        "Nun benötigen wir eine Funktion, die uns anhand des vorangegangen Tones und den Übergangs-Wahrscheinlichkeiten in der Tabelle, den nächsten Ton voraussagt. Vervollständige die Funktion `get_next_term()` welche eine Spalte der Tabelle übergeben bekommt und nach den Gewichtungen, die in dieser Spalte gespeichert sind, den nächsten Ton auswählt.\n",
+        "\n",
+        "Tipp: Hierfür könnte die Funktion random.choices() hilfreich sein: https://docs.python.org/3/library/random.html#random.choices"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 44,
       "metadata": {
         "id": "dnXNs8zWf5LE"
       },
@@ -503,17 +491,43 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "for i in range(100):\n",
+        "  test_term = get_next_term(transitions[60])\n",
+        "  assert test_term in [60,62], f\"Der Übergang von Pitch 60 kann nur zu Pitches 60 oder 62 führen. Hier wurde allerdings Pitch {test_term} erreicht.\"\n",
+        "print(\"Der Test war erfolgreich.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ChtO64SOF-dB",
+        "outputId": "370b20ec-904c-4f33-ab2e-d7fa2360b2a5"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Der Test war erfolgreich.\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "FUksSiXQf5LE"
       },
       "source": [
-        "Um diese Funktion nun mehrmals aufzurufen, können wir eine Schleife nutzen. Diese Schleife wird so lange laufen, bis wir eine gewünschte Länge erreicht haben."
+        "Um diese Funktion nun mehrmals aufzurufen, können wir eine Schleife nutzen. Diese Schleife wird so lange laufen, bis wir eine gewünschte Länge erreicht haben. Vervollständige dafür die Funktion `make_chain()`."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 47,
       "metadata": {
         "id": "Gub_ekuJf5LE"
       },
@@ -535,18 +549,32 @@
         "id": "JipvqB9of5LE"
       },
       "source": [
-        "Wenn wir nun `make_chain` aufrufen, erhalten wir eine neue Melodie, die auf den Übergangs-Wahrscheinlichkeiten der alten Melodie basiert."
+        "Wenn wir nun `make_chain` aufrufen, erhalten wir eine neue Melodie, die auf den Übergangs-Wahrscheinlichkeiten der beiden gezählten Melodien basiert."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 52,
       "metadata": {
-        "id": "YWXgizjnf5LE"
+        "id": "YWXgizjnf5LE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d9f6fec7-f2c7-46eb-a1a5-e8a24ecd0607"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Der Test war erfolgreich.\n"
+          ]
+        }
+      ],
       "source": [
-        "simple_chain = make_chain(transitions, 60, 10)"
+        "simple_chain = make_chain(transitions, 60, 10)\n",
+        "assert set(simple_chain).issubset({60,62,64}), \"Not all elements of list1 are represented in list2\"\n",
+        "print(\"Der Test war erfolgreich.\")"
       ]
     },
     {
@@ -555,7 +583,9 @@
         "id": "t3wb7SDof5LE"
       },
       "source": [
-        "Diese Melodie können wir nun mit `save_midi_pitches` in MIDI umwandeln und abspielen."
+        "Diese Melodie können wir nun mit `save_midi_pitches` in MIDI umwandeln und abspielen. Finde dafür heraus, wie du neue MIDI-Noten in music21 erstellst und an einen music21 Stream anfügst.\n",
+        "\n",
+        "https://web.mit.edu/music21/doc/usersGuide/usersGuide_04_stream1.html#usersguide-04-stream1"
       ]
     },
     {
@@ -572,7 +602,8 @@
         "    \"\"\"\n",
         "    midi_stream = music21.stream.Stream()\n",
         "    for note in midi_notes:\n",
-        "        midi_stream.append(music21.note.Note(note))\n",
+        "        midi_note = music21.note.Note(note)\n",
+        "        midi_stream.append(midi_note)\n",
         "    midi_stream.write('midi', file_path)"
       ]
     },
@@ -594,12 +625,12 @@
       },
       "source": [
         "## Längere Melodien aus MIDI-Dateien laden\n",
-        "Um die Übergangs-Wahrscheinlichkeiten aussagekräftiger zu machen, können wir längere Melodien aus MIDI-Dateien laden. Dazu nutzen wir die Bibliothek `music21`."
+        "Um die Übergangs-Wahrscheinlichkeiten aussagekräftiger zu machen, können wir längere Melodien aus MIDI-Dateien laden. Dazu nutzen wir die Bibliothek `music21`. Ergänze die folgende Funktion. Finde dafür heraus, wie du den MIDI-Pitch (eine Zahl von 0 bis 127) einer music21 Note erhältst und gehe dann durch das gesamte MIDI-File um sämtliche MIDI-Pitches an die Liste `midi_pitches` anzufügen."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 53,
       "metadata": {
         "id": "VQxzIXJuf5LE"
       },
@@ -856,7 +887,7 @@
         "id": "ouobB-Xcf5LF"
       },
       "source": [
-        "Wir laden dann alle Tonhöhen der hochgeladenen MIDI-Dateien in eine Liste"
+        "Wir laden dann alle Tonhöhen der hochgeladenen MIDI-Dateien in eine Liste. Vervollständige den folgenden Code dafür."
       ]
     },
     {
@@ -891,7 +922,7 @@
         "id": "S41mdXgTf5LF"
       },
       "source": [
-        "Dann erstellen wir für diese Liste eine neue Tabelle."
+        "Dann erstellen wir für diese Liste eine neue Tabelle. Ergänze den folgenden Code."
       ]
     },
     {
@@ -1961,7 +1992,7 @@
         "id": "NoZX_evwf5LF"
       },
       "source": [
-        "Und schließlich können wir mit dieser Tabelle eine neue Melodie generieren."
+        "Und schließlich können wir mit dieser Tabelle eine neue Melodie generieren. Und diese als MIDI abspeichern."
       ]
     },
     {
@@ -1975,6 +2006,17 @@
         "complex_chain = make_chain(new_transitions, 60, 100)\n",
         "save_midi_pitches(complex_chain, \"complex_chain.mid\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Damit haben wir das Ende dieses Tutorials erreicht. Wie könntest du Markov Chains weiter einsetzen? Wie wäre es zum Beispiel Akkorde mit der music21.chord.Chord miteinander zu verbinden?\n",
+        "\n",
+        "https://web.mit.edu/music21/doc/moduleReference/moduleChord.html#chord"
+      ],
+      "metadata": {
+        "id": "NwwskwmZJUxu"
+      }
     }
   ],
   "metadata": {
